[gd_scene load_steps=8 format=3 uid="uid://dh341jww3l3d1"]

[ext_resource type="Script" uid="uid://duf7o3qlbvtn3" path="res://scale/scale_item_container.gd" id="1_p7s6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtj8e"]
bg_color = Color(0.415686, 0.678431, 0.364706, 0)

[sub_resource type="Theme" id="Theme_p7s6q"]
Panel/styles/panel = SubResource("StyleBoxFlat_vtj8e")

[sub_resource type="Animation" id="Animation_vpx7e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme:Panel/styles/panel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("StyleBoxFlat_vtj8e")]
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7s6q"]
bg_color = Color(0.287172, 0.179477, 0.0158062, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.672544, 0.574731, 0.218298, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_size = 3

[sub_resource type="Animation" id="Animation_p7s6q"]
resource_name = "pulse"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme:Panel/styles/panel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("StyleBoxFlat_p7s6q")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpx7e"]
_data = {
&"RESET": SubResource("Animation_vpx7e"),
&"pulse": SubResource("Animation_p7s6q")
}

[node name="ItemContainer" type="Panel"]
mouse_filter = 1
theme = SubResource("Theme_p7s6q")
script = ExtResource("1_p7s6q")

[node name="GridContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -20.0
offset_right = 64.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vpx7e")
}

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="child_entered_tree" from="GridContainer" to="." method="_on_grid_container_child_entered_tree"]
[connection signal="child_exiting_tree" from="GridContainer" to="." method="_on_grid_container_child_exiting_tree"]
